--- a/_posts/2019-10-26-PySqlite.md
+++ b/_posts/2019-10-26-PySqlite.md
@@ -55,4 +55,4 @@ sqlite3安装好之后，Python也需要重新编译安装。本文以3为例。
 ```
 保存后退出，configure后执行`make`和`make install`重新安装Python，这时候可以看到make时关于sqlite3的报错消失。
 
-运行Python，发现`import sqlite3`不再报错。
+运行Python，发现`import sqlite3`不再报错。 post
