--- a/_posts/2019-10-26-PySqlite.md
+++ b/_posts/2019-10-26-PySqlite.md
@@ -37,7 +37,7 @@ make install
 sqlite3安装好之后，Python也需要重新编译安装。本文以3为例。
 
 进入Python解压包目录，使用vim或nano等编辑器打开`./setup.py`，找到如下代码段：
-```Python
+```python
 # We hunt for #define SQLITE_VERSION "n.n.n"
 # We need to find >= sqlite version 3.0.8
         sqlite_incdir = sqlite_libdir = None
@@ -50,7 +50,7 @@ sqlite3安装好之后，Python也需要重新编译安装。本文以3为例。
                              ]
 ```
 在`sqlite_inc_paths`列表中加入sqlite3安装目录的include路径（本例为`/usr/local/sqlite3/include`）：
-```Python
+```python
 # We hunt for #define SQLITE_VERSION "n.n.n"
 # We need to find >= sqlite version 3.0.8
         sqlite_incdir = sqlite_libdir = None
